@@ -525,6 +525,7 @@ static void GenerateDeclarations(FILE *f, FILE *fh, FILE *flh)
                 break;
 
             case INT_SET_VARIABLE_TO_LITERAL:
+            case INT_SET_SEED_RANDOM:
             case INT_SET_VARIABLE_RANDOM:
                 intVar1 = IntCode[i].name1.c_str();
                 break;
@@ -890,6 +891,10 @@ static void GenerateAnsiC(FILE *f, int begin, int end)
 
             case INT_SET_VARIABLE_RANDOM:
                 fprintf(f, "%s = rand();\n", MapSym(IntCode[i].name1, ASINT));
+                break;
+
+            case INT_SET_SEED_RANDOM:
+                fprintf(f, "srand(%s);\n", MapSym(IntCode[i].name1, ASINT));
                 break;
 
             case INT_SET_VARIABLE_SHL:
