@@ -5194,6 +5194,9 @@ static void CompileFromIntermediate()
                 break;
             }
 #endif
+            case INT_SET_SEED_RANDOM:
+                break;
+
             case INT_SET_VARIABLE_RANDOM: {
                 MemForVariable(a->name1, &addr1);
                 sov1 = SizeOfVar(a->name1);
