@@ -17,6 +17,8 @@
 
     * Fixed: In simulation mode when pressing an input, if not selected pin MCU, then LDmicro is closed. Issue #132
 
+    * Fixed: The code generated by "Compile ANSIC" for the SRAND insyruction #133
+
 == Release 4.4.3.1
 
     * Fixed: ADC conversion time Tad for PIC16F88
